ParSmol.y
-- -*- haskell -*- File generated by the BNF Converter (bnfc 2.9.5).

-- Parser definition for use with Happy
{
{-# OPTIONS_GHC -fno-warn-incomplete-patterns -fno-warn-overlapping-patterns #-}
{-# LANGUAGE PatternSynonyms #-}

module ParSmol
  ( happyError
  , myLexer
  , pProgram
  ) where

import Prelude

import qualified AbsSmol
import LexSmol

}

%name pProgram Program
-- no lexer declaration
%monad { Err } { (>>=) } { return }
%tokentype {Token}
%token
  '!'       { PT _ (TS _ 1)  }
  '!='      { PT _ (TS _ 2)  }
  '%'       { PT _ (TS _ 3)  }
  '&&'      { PT _ (TS _ 4)  }
  '('       { PT _ (TS _ 5)  }
  '()'      { PT _ (TS _ 6)  }
  ')'       { PT _ (TS _ 7)  }
  '*'       { PT _ (TS _ 8)  }
  '+'       { PT _ (TS _ 9)  }
  ','       { PT _ (TS _ 10) }
  '-'       { PT _ (TS _ 11) }
  '/'       { PT _ (TS _ 12) }
  '::='     { PT _ (TS _ 13) }
  ';'       { PT _ (TS _ 14) }
  '<'       { PT _ (TS _ 15) }
  '<='      { PT _ (TS _ 16) }
  '='       { PT _ (TS _ 17) }
  '=='      { PT _ (TS _ 18) }
  '>'       { PT _ (TS _ 19) }
  '>='      { PT _ (TS _ 20) }
  'boolean' { PT _ (TS _ 21) }
  'else'    { PT _ (TS _ 22) }
  'false'   { PT _ (TS _ 23) }
  'for'     { PT _ (TS _ 24) }
  'func'    { PT _ (TS _ 25) }
  'if'      { PT _ (TS _ 26) }
  'int'     { PT _ (TS _ 27) }
  'print'   { PT _ (TS _ 28) }
  'string'  { PT _ (TS _ 29) }
  'to'      { PT _ (TS _ 30) }
  'true'    { PT _ (TS _ 31) }
  'while'   { PT _ (TS _ 32) }
  '{'       { PT _ (TS _ 33) }
  '||'      { PT _ (TS _ 34) }
  '}'       { PT _ (TS _ 35) }
  L_Ident   { PT _ (TV $$)   }
  L_integ   { PT _ (TI $$)   }
  L_quoted  { PT _ (TL $$)   }

%%

Ident :: { AbsSmol.Ident }
Ident  : L_Ident { AbsSmol.Ident $1 }

Integer :: { Integer }
Integer  : L_integ  { (read $1) :: Integer }

String  :: { String }
String   : L_quoted { $1 }

Program :: { AbsSmol.Program }
Program : ListFunctionDef { AbsSmol.EProg $1 }

ListFunctionDef :: { [AbsSmol.FunctionDef] }
ListFunctionDef
  : FunctionDef { (:[]) $1 }
  | FunctionDef ListFunctionDef { (:) $1 $2 }

FunctionDef :: { AbsSmol.FunctionDef }
FunctionDef : 'func' Ident '()' Block { AbsSmol.EFunDef $2 $4 }

Block :: { AbsSmol.Block }
Block : '{' ListStatement '}' { AbsSmol.EBlock $2 }

ListStatement :: { [AbsSmol.Statement] }
ListStatement
  : {- empty -} { [] } | Statement ListStatement { (:) $1 $2 }

Statement :: { AbsSmol.Statement }
Statement
  : Type Ident '=' Expr ';' { AbsSmol.EVarDecl $1 $2 $4 }
  | Type Ident '::=' Expr ';' { AbsSmol.ERovarDecl $1 $2 $4 }
  | Ident '=' Expr ';' { AbsSmol.EAssign $1 $3 }
  | 'print' '(' Expr ')' ';' { AbsSmol.EPrint $3 }
  | 'while' '(' Expr ')' Block { AbsSmol.EWhile $3 $5 }
  | 'if' '(' Expr ')' Block 'else' Block { AbsSmol.EIf $3 $5 $7 }
  | 'for' '(' Type Ident '=' Expr 'to' Expr ')' Block { AbsSmol.EFor $3 $4 $6 $8 $10 }
  | Block { AbsSmol.EBlockStatement $1 }
  | Expr ';' { AbsSmol.EExpressionStatement $1 }

Type :: { AbsSmol.Type }
Type
  : 'int' { AbsSmol.Int }
  | 'string' { AbsSmol.Str }
  | 'boolean' { AbsSmol.Bool }

Expr6 :: { AbsSmol.Expr }
Expr6
  : Ident { AbsSmol.EVar $1 }
  | Integer { AbsSmol.ELitInt $1 }
  | 'true' { AbsSmol.ELitTrue }
  | 'false' { AbsSmol.ELitFalse }
  | Ident '()' { AbsSmol.EApp $1 }
  | String { AbsSmol.EString $1 }
  | '(' Expr ')' { $2 }

Expr5 :: { AbsSmol.Expr }
Expr5
  : '-' Expr6 { AbsSmol.Neg $2 }
  | '!' Expr6 { AbsSmol.Not $2 }
  | Expr6 { $1 }

Expr4 :: { AbsSmol.Expr }
Expr4 : Expr4 MulOp Expr5 { AbsSmol.EMul $1 $2 $3 } | Expr5 { $1 }

Expr3 :: { AbsSmol.Expr }
Expr3 : Expr3 AddOp Expr4 { AbsSmol.EAdd $1 $2 $3 } | Expr4 { $1 }

Expr2 :: { AbsSmol.Expr }
Expr2 : Expr2 RelOp Expr3 { AbsSmol.ERel $1 $2 $3 } | Expr3 { $1 }

Expr1 :: { AbsSmol.Expr }
Expr1 : Expr2 '&&' Expr1 { AbsSmol.EAnd $1 $3 } | Expr2 { $1 }

Expr :: { AbsSmol.Expr }
Expr : Expr1 '||' Expr { AbsSmol.EOr $1 $3 } | Expr1 { $1 }

ListExpr :: { [AbsSmol.Expr] }
ListExpr
  : {- empty -} { [] }
  | Expr { (:[]) $1 }
  | Expr ',' ListExpr { (:) $1 $3 }

AddOp :: { AbsSmol.AddOp }
AddOp : '+' { AbsSmol.Plus } | '-' { AbsSmol.Minus }

MulOp :: { AbsSmol.MulOp }
MulOp
  : '*' { AbsSmol.Times } | '/' { AbsSmol.Div } | '%' { AbsSmol.Mod }

RelOp :: { AbsSmol.RelOp }
RelOp
  : '<' { AbsSmol.LTH }
  | '<=' { AbsSmol.LE }
  | '>' { AbsSmol.GTH }
  | '>=' { AbsSmol.GE }
  | '==' { AbsSmol.EQU }
  | '!=' { AbsSmol.NE }

{

type Err = Either String

happyError :: [Token] -> Err a
happyError ts = Left $
  "syntax error at " ++ tokenPos ts ++
  case ts of
    []      -> []
    [Err _] -> " due to lexer error"
    t:_     -> " before `" ++ (prToken t) ++ "'"

myLexer :: String -> [Token]
myLexer = tokens

}
